--- a/build
+++ b/build
@@ -14,7 +14,8 @@ targets = {
         'main' : 'Miranda/miranda',
         'test' : [
             'Miranda/test/ValueTree_Test',
-            'Miranda/test/Commit_Test'
+            'Miranda/test/Commit_Test',
+            'Miranda/test/CommitList_Test'
         ]
     },
     'saffron' : {
