--- a/Saffron/Apps/apache.php.conf
+++ b/Saffron/Apps/apache.php.conf
@@ -1,3 +1,4 @@
+# Make sure you set `cgi.force_redirect` to `0` in your `php.ini`.
 ServerRoot "/usr/lib64/apache2"
 LoadModule mime_module modules/mod_mime.so
 LoadModule cgi_module modules/mod_cgi.so
